--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.1.18",
     "sass": "^1.63.6",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
