--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.18",
     "sass": "^1.63.6",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
