--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "firebase": "^10.0.0",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
+    "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
