--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.18",
     "sass": "^1.63.6",
+    "swiper": "^11.0.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
